Fixed alignment issues in contact area. Added Mixin too

--- a/less/index.less
+++ b/less/index.less
@@ -63,6 +63,11 @@ html, body {
 	flex-wrap: wrap;  
 }
 
+.flexCenter(){
+	.flex; 
+	justify-content: center; 
+}
+
 nav{
 	justify-content: flex-end; 
 	width:85%; 
@@ -83,8 +88,7 @@ nav{
 }
 
 .container{
-	.flex; 
-	justify-content: center;
+	.flexCenter; 
 	padding-bottom: 25px; 
 
     header{
@@ -113,7 +117,7 @@ nav{
 		  width: 140px; 
 		  border-radius: 15px; 
 		  text-align: center; 
-		  margin-top: 10px; 
+		  margin-top: 15px; 
 		  font-size: 1.1rem; 
 	  }
       img{
@@ -175,16 +179,16 @@ nav{
 
 
 .lowerImg{
-	width: 40%; 
+	width: 32%; 
 	height: 270px; 
 }
 
 address{
-  width: 35%;
-  .flex; 
-  justify-content: center; 
+  border: @border; 
+  width: 38%;
+  .flexCenter; 
   flex-direction: column; 
-  padding-left: 12.5%; 
+  padding-left: 18%; 
   line-height: 1.3; 
 	
     h2{
